--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -8,10 +8,9 @@
 
 .card {
   position: absolute;
-  width: 380px;
-  height: 120px;
+  width: 300px;
+  height: 220px;
   /* transform-style: preserve-3d; */
-  transition: transform 0.5s;
   filter: blur(2.5px);
 }
 
@@ -21,20 +20,42 @@
   border-radius: 5px;
   z-index: 3;
   filter: blur(0px);
+  transform: translate(0%);
+  transition: transform 0.5s;
 }
 
 .card1 {
-  width: 320px;
-  height: 150px;
-  transform: scale(1.2);
+  /* width: 320px;
+  height: 150px; */
+  /* transform: scale(1.2); */
+  transform: translate(10%);
   filter: blur(1.5px);
   z-index: 2;
 }
 
 .card2 {
-  width: 380px;
+  /* width: 380px;
   height: 120px;
-  transform: scale(1.2);
+  transform: scale(1.2); */
+  transform: translate(20%);
+  filter: blur(2.5px);
+  z-index: 1;
+}
+
+.card-1 {
+  /* width: 320px;
+  height: 150px; */
+  /* transform: scale(1.2); */
+  transform: translate(-10%);
+  filter: blur(1.5px);
+  z-index: 2;
+}
+
+.card-2 {
+  /* width: 380px;
+  height: 120px;
+  transform: scale(1.2); */
+  transform: translate(-20%);
   filter: blur(2.5px);
   z-index: 1;
 }
